--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.12"
 description = "Type less types with inferred return types"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "tortoise-orm>=0.25.0",
+]
 
 [build-system]
 requires = ["hatchling"]
