--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,7 @@ version = "0.1.12"
 description = "Type less types with inferred return types"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "tortoise-orm>=0.25.0",
-]
+dependencies = []
 
 [build-system]
 requires = ["hatchling"]
