--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "type-less"
-version = "0.1.16"
+version = "0.1.17"
 description = "Type less types with inferred return types"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -11,13 +11,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+addopts = ["--import-mode=importlib"]
 
 [dependency-groups]
-dev = [
-    "fastapi>=0.115.11",
-    "pytest>=8.3.5",
-    "pytest-asyncio>=0.26.0",
-]
+dev = ["fastapi>=0.115.11", "pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
