--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "type-less"
-version = "0.1.18"
+version = "0.1.19"
 description = "Type less types with inferred return types"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -15,3 +15,6 @@ addopts = ["--import-mode=importlib"]
 
 [dependency-groups]
 dev = ["fastapi>=0.115.11", "pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
+
+[tool.black]
+line-length = 120
